Fixed missing white space in install agreement.
Fixed a missing space below the "got it" button in the license agreement.

--- a/src/web/assets/installer/src/install.scss
+++ b/src/web/assets/installer/src/install.scss
@@ -162,6 +162,7 @@ input.hidden {
 
   .centeralign {
     margin-top: 35px;
+    margin-bottom: 70px !important;
   }
 }
 
